--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,96 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
+  }
+}
+
+.container {
+  text-align: center;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 5px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.card {
+  width: calc(16.666%);
+  /* 6 cards in a row on A4 sheet with margin */
+  background-color: #f5f5f5;
+  padding: 2px;
+  margin-top: 5px;
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
+  border-style: dotted;
+}
+
+.image-container {
+  width: 210px;
+}
+
+.pin {
+  margin-top: 0px;
+}
+
+.image-text {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+@media print {
+  @page {
+    margin: 0;
+  }
+
+  body * {
+    visibility: hidden;
+    margin: 0;
+  }
+
+  .print-content,
+  .print-content * {
+    visibility: visible;
+  }
+
+  .print-content {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+  }
+
+  .container {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+  }
+
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+
+  .card {
+    width: calc(16.666%);
+    /* 6 cards in a row on A4 sheet with margin */
+    background-color: #f0f0f0;
+    padding: 2px;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+  }
+
+  .pin {
+    margin-top: 0px;
   }
 }
